MIPS: ralink: dts: gardena_smart_gateway_mt7688: Keep eth0 ifname for Ethernet port
Signed-off-by: Reto Schneider <reto.schneider@husqvarnagroup.com>

--- a/arch/mips/boot/dts/ralink/gardena_smart_gateway_mt7688.dts
+++ b/arch/mips/boot/dts/ralink/gardena_smart_gateway_mt7688.dts
@@ -179,6 +179,7 @@
 		compatible = "mediatek,eth-mac";
 		reg = <0>;
 		phy-mode = "mii";
+		label = "mac0";
 
 		fixed-link {
 			speed = <100>;
@@ -197,7 +198,7 @@
 
 		port@0 {
 			reg = <0>;
-			label = "lan";
+			label = "eth0";
 		};
 
 		port@6 {
