[sg noup] Import OpenWRT Ethernet switch drivers
Repo: git://git.openwrt.org/openwrt/openwrt.git
Commit: b118aba8cbac58a45d4882cd79e18e56c3fbdc70
Subdirectories:
 - target/linux/generic/files
 - target/linux/ramips/files

--- a/drivers/net/ethernet/Kconfig
+++ b/drivers/net/ethernet/Kconfig
@@ -159,6 +159,7 @@ source "drivers/net/ethernet/pensando/Kconfig"
 source "drivers/net/ethernet/qlogic/Kconfig"
 source "drivers/net/ethernet/qualcomm/Kconfig"
 source "drivers/net/ethernet/rdc/Kconfig"
+source "drivers/net/ethernet/ralink/Kconfig"
 source "drivers/net/ethernet/realtek/Kconfig"
 source "drivers/net/ethernet/renesas/Kconfig"
 source "drivers/net/ethernet/rocker/Kconfig"
